# NGSS-KnowledgeGraph

./: .gitignore  API.md  README.md  pyproject.toml
.github/workflows/: pages.yml
JSON/: ngss68.json  ngss912.json  ngssK5.json
benchmarks/: queries.json
data/canonical/: audit.json  manifest.json  supplements.json
data/canonical/info/: concepts.json  crosswalks.json  grades.json  index.json  topics.json
scripts/: build_pages.py
src/ngss_kg_rag/: __init__.py  answering.py  api.py  benchmarks.py  canonical.py  cli.py  config.py  graph.py  ingest.py  models.py  normalization.py  retrieval.py  storage.py
src/ngss_kg_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ngss_kg_rag/static/: app.css  app.js  index.html
tests/: test_smoke.py
